--- a/_config.yml
+++ b/_config.yml
@@ -101,7 +101,7 @@ theme: landscape
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
-# deploy:
-#     type: git
+deploy:
+     type: ''
 #     repo: 
 #     branch: master
