feat:update host

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -3,7 +3,7 @@ language: zh-CN
 top_img: false
 # Avatar (頭像)
 avatar:
-  img: http://106.53.104.23:8888/group1/M00/00/00/CgAMB2DTM_uALqKoAKNk5akbN_Y41.jpeg
+  img: http://howiechen95.com:8888/group1/M00/00/00/CgAMB2DTM_uALqKoAKNk5akbN_Y41.jpeg
   effect: false
 
 
