--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -46,7 +46,7 @@ aside:
       link: https://github.com/howiechen95
   card_announcement:
     enable: true
-    content: 在学了，别催哦~
+    content: 在学了，别催！！
   card_recent_post:
     enable: true
     limit: 5 # if set 0 will show all
@@ -77,7 +77,59 @@ aside:
 
 highlight_theme: mac #  darker / pale night / light / ocean / mac / mac light / false
 highlight_copy: true # copy button
-highlight_lang: true # show the code language
+highlight_lang: false # show the code language
 highlight_shrink: false # true: shrink the code blocks / false: expand the code blocks | none: expand code blocks and hide the button
 highlight_height_limit: false # unit: px
 code_word_wrap: false
+
+
+# canvas_ribbon (靜止彩帶背景)
+# See: https://github.com/hustcc/ribbon.js
+canvas_ribbon:
+  enable: false
+  size: 150
+  alpha: 0.6
+  zIndex: -1
+  click_to_change: true
+  mobile: false
+
+# Fluttering Ribbon (動態彩帶)
+canvas_fluttering_ribbon:
+  enable: true
+  mobile: false
+
+# canvas_nest
+# https://github.com/hustcc/canvas-nest.js
+canvas_nest:
+  enable: true
+  color: '0,0,255' #color of lines, default: '0,0,0'; RGB values: (R,G,B).(note: use ',' to separate.)
+  opacity: 0.7 # the opacity of line (0~1), default: 0.5.
+  zIndex: -1 # z-index property of the background, default: -1.
+  count: 99 # the number of lines, default: 99.
+  mobile: false
+
+# Mouse click effects: fireworks (鼠標點擊效果: 煙火特效)
+fireworks:
+  enable: true
+  zIndex: 9999 # -1 or 9999
+  mobile: false
+
+# Mouse click effects: words (鼠標點擊效果: 文字)
+ClickShowText:
+  enable: true
+  text:
+   - 富强
+   - 民主
+   - 文明
+   - 和谐
+   - 自由
+   - 平等
+   - 公正
+   - 法治
+   - 爱国
+   - 敬业
+   - 诚信
+   - 友善
+  fontSize: 15px
+  random: false
+  mobile: true
