--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -60,7 +60,7 @@ aside:
   card_tags:
     enable: true
     limit: 40 # if set 0 will show all
-    color: false
+    color: true
     sort_order: # Don't modify the setting unless you know how it works
   card_archives:
     enable: true
@@ -75,7 +75,7 @@ aside:
     last_push_date: true
     sort_order: # Don't modify the setting unless you know how it works
 
-highlight_theme: mac #  darker / pale night / light / ocean / mac / mac light / false
+highlight_theme: light #  darker / pale night / light / ocean / mac / mac light / false
 highlight_copy: true # copy button
 highlight_lang: false # show the code language
 highlight_shrink: false # true: shrink the code blocks / false: expand the code blocks | none: expand code blocks and hide the button
@@ -114,6 +114,12 @@ fireworks:
   zIndex: 9999 # -1 or 9999
   mobile: false
 
+activate_power_mode:
+  enable: true
+  colorful: true # open particle animation (冒光特效)
+  shake: true #  open shake (抖動特效)
+  mobile: false
+
 # Mouse click effects: words (鼠標點擊效果: 文字)
 ClickShowText:
   enable: true
@@ -133,3 +139,30 @@ ClickShowText:
   fontSize: 15px
   random: false
   mobile: true
+
+#preloader: true
+
+
+# Time difference between publish date and now (網頁運行時間)
+# Formal: Month/Day/Year Time or Year/Month/Day Time
+runtimeshow:
+  enable: true
+  publish_date: 06/25/2021
+
+# Change font size
+change_font_size: false
+
+# Conversion between Traditional and Simplified Chinese (簡繁轉換)
+translate:
+  enable: true
+  # The text of a button
+  default: 簡
+  # the language of website (1 - Traditional Chinese/ 2 - Simplified Chinese）
+  defaultEncoding: 1
+  # Time delay
+  translateDelay: 0
+  # The text of the button when the language is Simplified Chinese
+  msgToTraditionalChinese: '繁'
+  # The text of the button when the language is Traditional Chinese
+  msgToSimplifiedChinese: '簡'
+
