--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -175,3 +175,7 @@ snackbar:
   position: bottom-left
   bg_light: '#49b1f5' #light mode時彈窗背景
   bg_dark: '#2d3035' #dark mode時彈窗背景
+
+pangu:
+  enable: true
+  field: post # site/post
