--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -6,6 +6,12 @@ avatar:
   img: http://howiechen95.com:8888/group1/M00/00/00/CgAMB2DTM_uALqKoAKNk5akbN_Y41.jpeg
   effect: false
 
+footer:
+  owner:
+    enable: true
+    since: 2020
+  custom_text: <div class="icp"><a href="http://beian.miit.gov.cn" target="_blank" rel="noopener"><img class="icp-icon entered loading" src="/img/icp.png" data-ll-status="loading"><span>粤ICP备18101807号</span></a></div>
+  copyright: true # Copyright of theme and framework
 
 cover:
   # 是否顯示文章封面
@@ -170,12 +176,12 @@ translate:
 # https://github.com/polonel/SnackBar
 # position 彈窗位置
 # 可選 top-left / top-center / top-right / bottom-left / bottom-center / bottom-right
-snackbar:
-  enable: true
-  position: bottom-left
-  bg_light: '#49b1f5' #light mode時彈窗背景
-  bg_dark: '#2d3035' #dark mode時彈窗背景
-
-pangu:
-  enable: true
-  field: post # site/post
+#snackbar:
+#  enable: true
+#  position: bottom-left
+#  bg_light: '#49b1f5' #light mode時彈窗背景
+#  bg_dark: '#2d3035' #dark mode時彈窗背景
+#
+#pangu:
+#  enable: true
+#  field: post # site/post
