--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -1,6 +1,8 @@
 language: zh-CN
 
-top_img: false
+disable_top_img: false
+index_img: http://127.0.0.1:8080/group1/default/20210627/14/56/2/[Fansub][A_Chain_of_Short_Stories_about_Their_Distance][SP1][1080p][BluRay][x264_AC3][1EE0A34C][00-04-00][20210627-145516312].jpg
+
 # Avatar (頭像)
 avatar:
   img: http://howiechen95.com:8888/group1/M00/00/00/CgAMB2DTM_uALqKoAKNk5akbN_Y41.jpeg
@@ -25,16 +27,16 @@ cover:
 #  default_cover:
 #  - https://cdn.jsdelivr.net/gh/jerryc127/CDN@latest/cover/default_bg.png
 menu:
-  首頁: / || fas fa-home
-  時間軸: /archives/ || fas fa-archive
-  標籤: /tags/ || fas fa-tags
-  分類: /categories/ || fas fa-folder-open
-  清單||fa fa-heartbeat:
-    音樂: /music/ || fas fa-music
-    照片: /Gallery/ || fas fa-images
-    電影: /movies/ || fas fa-video
-  友鏈: /link/ || fas fa-link
-  關於: /about/ || fas fa-heart
+  首页: / || fas fa-home
+  时间轴: /archives/ || fas fa-archive
+  标签: /tags/ || fas fa-tags
+  分类: /categories/ || fas fa-folder-open
+  清单||fa fa-heartbeat:
+    音乐: /music/ || fas fa-music
+    照片: /gallery/ || fas fa-images
+    电影: /movies/ || fas fa-video
+  友链: /link/ || fas fa-link
+  关于: /about/ || fas fa-heart
 
 aside:
   enable: true
