--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -4,6 +4,8 @@ disable_top_img: false
 index_img: http://howiechen95.com:8888/group1/M00/00/00/CgAMB2DZ-3mAP7IEAANUbLBmHuA681.jpg
 #index_img: http://howiechen95.com:8888/group1/M00/00/00/CgAMB2DZ-3yANMmkAAFzMLwulHs002.jpg
 
+archive_img: http://howiechen95.com:8888/group1/M00/00/00/CgAMB2DbUXeACiLqAAK0fQnxMbI099.jpg
+
 # Avatar (頭像)
 avatar:
   img: http://howiechen95.com:8888/group1/M00/00/00/CgAMB2DTM_uALqKoAKNk5akbN_Y41.jpeg
