--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -91,7 +91,7 @@ aside:
     last_push_date: false
     sort_order: # Don't modify the setting unless you know how it works
 
-highlight_theme: pale night #  darker / pale night / light / ocean / mac / mac light / false
+highlight_theme: mac #  darker / pale night / light / ocean / mac / mac light / false
 highlight_copy: true # copy button
 highlight_lang: false # show the code language
 highlight_shrink: false # true: shrink the code blocks / false: expand the code blocks | none: expand code blocks and hide the button
