--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -1,6 +1,6 @@
 language: zh-CN
 
-disable_top_img: false
+disable_top_img: true
 index_img: http://howiechen95.com:8888/group1/M00/00/00/CgAMB2DZ-3mAP7IEAANUbLBmHuA681.jpg
 #index_img: http://howiechen95.com:8888/group1/M00/00/00/CgAMB2DZ-3yANMmkAAFzMLwulHs002.jpg
 
@@ -111,13 +111,13 @@ canvas_ribbon:
 
 # Fluttering Ribbon (動態彩帶)
 canvas_fluttering_ribbon:
-  enable: true
+  enable: false
   mobile: false
 
 # canvas_nest
 # https://github.com/hustcc/canvas-nest.js
 canvas_nest:
-  enable: true
+  enable: false
   color: '0,0,255' #color of lines, default: '0,0,0'; RGB values: (R,G,B).(note: use ',' to separate.)
   opacity: 0.7 # the opacity of line (0~1), default: 0.5.
   zIndex: -1 # z-index property of the background, default: -1.
