--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -15,7 +15,7 @@ footer:
   owner:
     enable: true
     since: 2021
-  custom_text: <div class="icp"><a href="http://beian.miit.gov.cn" target="_blank" rel="noopener"><img class="icp-icon entered loading" src="/img/icp.png" data-ll-status="loading"><span>粤ICP备2021092723号</span></a></div>
+  custom_text: <div class="icp"><a href="http://beian.miit.gov.cn" target="_blank" rel="noopener"><img class="icp-icon entered loading" src="/img/icp.png" data-ll-status="loading"><span>粤ICP备2021092723号-1</span></a></div>
   copyright: true # Copyright of theme and framework
 
 cover:
