--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -131,14 +131,14 @@ fireworks:
   mobile: false
 
 activate_power_mode:
-  enable: true
+  enable: false
   colorful: true # open particle animation (冒光特效)
   shake: true #  open shake (抖動特效)
   mobile: false
 
 # Mouse click effects: words (鼠標點擊效果: 文字)
 ClickShowText:
-  enable: true
+  enable: false
   text:
    - 富强
    - 民主
