--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -8,7 +8,7 @@ archive_img: http://howiechen95.com:8888/group1/M00/00/00/CgAMB2DbUXeACiLqAAK0fQ
 
 # Avatar (頭像)
 avatar:
-  img: http://howiechen95.com:8888/group1/M00/00/00/CgAMB2DTM_uALqKoAKNk5akbN_Y41.jpeg
+  img: http://howiechen95.com:8888/group1/M00/00/00/CgAMB2DtsGeAQ9tOAAFfbRxs-WA526.jpg
   effect: false
 
 footer:
