--- a/_config.yml
+++ b/_config.yml
@@ -102,6 +102,38 @@ theme: butterfly
 #theme: pure
 #theme: cyanstyle
 
+## https://github.com/EYHN/hexo-helper-live2d
+live2d:
+  enable: true    # 是否启用看板娘
+  scriptFrom: local    # 默认
+  pluginRootPath: live2dw/    # 插件在站点上的根目录(相对路径)
+  pluginJsPath: lib/    # 脚本文件相对与插件根目录路径
+  pluginModelPath: assets/    # 模型文件相对与插件根目录路径
+  # scriptFrom: jsdelivr    # jsdelivr CDN
+  # scriptFrom: unpkg    # unpkg CDN
+  # scriptFrom: https://cdn.jsdelivr.net/npm/live2d-widget@3.x/lib/L2Dwidget.min.js    # 你的自定义 url
+  tagMode: false # 标签模式, 是否仅替换 live2d tag标签而非插入到所有页面中
+  debug: false # 调试, 是否在控制台输出日志
+  model:
+    use: live2d-widget-model-hijiki # npm-module 包的名字
+    scale: 1
+    hHeadPos: 0.5
+    vHeadPos: 0.618
+  display:
+    superSample: 2
+    width: 200
+    height: 400
+    position: right    # 左侧还是右侧
+    hOffset: 20
+    vOffset: -60    # 距底部距离
+  mobile:
+    show: true    # 手机端是否可见，建议不可见否则可能影响阅读
+    scale: 0.5
+  react:
+    opacityDefault: 0.7
+    opacityOnHover: 0.2
+
+
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
