--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "hexo-renderer-pug": "^1.0.0",
     "hexo-renderer-stylus": "^2.0.1",
     "hexo-server": "^2.0.0",
-    "hexo-theme-landscape": "^0.0.3"
+    "hexo-theme-landscape": "^0.0.3",
+    "live2d-widget-model-hijiki": "^1.0.5"
   }
 }
