--- a/_config.yml
+++ b/_config.yml
@@ -123,8 +123,8 @@ live2d:
     superSample: 2
     width: 200
     height: 400
-    position: right    # 左侧还是右侧
-    hOffset: 20
+    position: left    # 左侧还是右侧
+    hOffset: 0
     vOffset: -60    # 距底部距离
   mobile:
     show: true    # 手机端是否可见，建议不可见否则可能影响阅读
